--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="dragon.png" />
+    <link rel="icon" href="Sat-image.jpeg" />
     <title>Satya Mahesh Kolli</title>
 </head>
 <body>
